fix(mainnav-dropdown): alignment issue in desktop and mobile view

--- a/src/components/Mainnav/sgds-mainnav-dropdown.scss
+++ b/src/components/Mainnav/sgds-mainnav-dropdown.scss
@@ -1,3 +1,9 @@
+:host{
+    align-self: center;
+    @media (max-width: 992px) { 
+        align-self:unset;    
+    }
+}
 
 .nav-link {
     gap: 1rem;
